samples/_failures_safe/1761164043_fbac9d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8e749d58.c: In function ‘main’:
./samples/SAFE/__tmp_8e749d58.c:163:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  163 |     size_t num_
      |     ^~~~~~
./samples/SAFE/__tmp_8e749d58.c:163:5: error: expected declaration or statement at end of input
